src/app/pages/detail-page/detail-page.component.scss
@use '../../../breakpoints' as breakpoints;
@use '../../../easings' as easings;

:host {
  display: flex;
  flex-direction: column;
  height: 100%;
  flex-grow: 1;

  &.is-entity {
    #detail-content {
      padding-bottom: 2rem;
    }
  }
}

.iframe-container {
  flex-grow: 1;
  min-height: 50vh;
}

#detail-content {
  max-height: calc(100vh - 64px - 64px - 2rem - 4px);
  overflow-y: auto;

  flex-grow: 1;
  display: grid;
  grid-template-columns: calc(60% - 1rem) calc(40% - 1rem);
  grid-template-rows: 100%;

  background-color: #eee;

  padding: 0 2rem;
  grid-gap: 2rem;

  @include breakpoints.max-width(m) {
    display: flex;
    flex-flow: column;
    padding: 0;
    grid-gap: 0;
    max-height: unset;
  }
}

app-entity-detail,
app-compilation-detail {
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  height: 100%;
}

div.related-content-wrapper {
  height: 50vh;
  max-height: 50vh;
  background-color: white;
  position: relative;
}

div.related-content {
  background-color: white;
  position: absolute;
  bottom: 0;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  box-sizing: border-box;
  gap: 16px;
  padding: 32px;
  width: 100%;
  margin: 0 auto;
  height: 50vh;
  max-height: 90vh;
  z-index: 1;

  transition: height 300ms easings.$easeInOutQuad;
  &.expanded {
    height: 90vh;
    box-shadow: 0px -2px 2px rgba(0, 0, 0, 0.25);
  }

  h3 {
    font-size: 24px;
    font-weight: 700;
    color: var(--brand-color);
    margin: 0;
  }

  div.related-compilations-grid {
    grid-template-rows: fit-content;
    grid-auto-rows: fit-content;
    margin-left: -32px;
    margin-right: -32px;
    padding: 0 32px;
    overflow-y: scroll;

    &:not(.expanded) {
      div.related-compilations-grid {
        grid-template-rows: fit-content;
        grid-auto-rows: 0;
        padding-bottom: 0;
        row-gap: 0;
        overflow: hidden;
      }
    }
  }

  div.grid-item {
    position: relative;
    button.floating-button {
      appearance: unset;
      border: unset;
      outline: unset;

      cursor: pointer;
      background-color: var(--brand-color);
      width: 42px;
      height: 42px;
      display: grid;
      place-content: center;
      border-radius: 50%;

      position: absolute;
      bottom: calc(50% - 24px);

      z-index: 2;

      mat-icon {
        color: white;
        font-size: 42px;
        width: 42px;
        height: 42px;
        line-height: 42px;
      }

      &[disabled],
      &.disabled {
        cursor: unset;
        background-color: lightgray;
      }

      &.left {
        left: 0px;
        transform: translateX(-33%) translateY(-50%);
      }
      &.right {
        right: 0px;
        transform: translateX(33%) translateY(-50%);
      }
    }
  }
}

